src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.hide-scroll-bar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.hide-scroll-bar::-webkit-scrollbar {
  display: none;
}

:root {
  --foreground-rgb: 255, 255, 255;
  --background-start-rgb: 255, 255, 255;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    ;
    --background-start-rgb: 255, 255, 255;
    --background-end-rgb: 255, 255, 255;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(to bottom,
      transparent,
      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}


@layer components {
  * {
    appearance: none;
  }

  body {
    @apply bg-orange-50;
    font-family: "Playfair Display", serif;
  }

  #products-cards {
    @apply text-black bg-orange-50 bg-opacity-5 rounded-xl;
  }

  #nav-bar li {
    @apply hover:scale-110 hover:rounded-lg text-xs md:text-lg hover:underline
  }

  #categories-id li {
    @apply hover:underline
  }

  #footer {
    @apply text-gray-800;
  }

  #footer li {
    @apply text-gray-700;
  }

  #new-collection {
    font-family: 'Dancing Script', 'Helvetica Neue', cursive;
  }

  #banner {
    font-family: 'Dancing Script', 'Helvetica Neue', cursive;
  }
}

